# hadron

./: .dockerignore  .gitignore  .gitmodules  404.html  Cargo.toml  DEVELOPMENT.md  Dockerfile  Justfile  NEW-README.md  README.md  book.toml  build.rs  clippy.toml  docker-compose.yaml  docker-compose.yml  index.html  print.html  release-checklist.md  rustfmt.toml  searchindex.js  searchindex.json  todo.md
examples/pipeline-transactional-processing/: Cargo.toml  Dockerfile  Justfile  README.md  deployment.yaml  sqlx-data.json
examples/pipeline-transactional-processing/migrations/: 20210924185613_base.sql
examples/pipeline-transactional-processing/src/: main.rs
examples/pipeline-transactional-processing/src/handlers/: cleanup.rs  deploy_service.rs  mod.rs  notify_user.rs  setup_billing.rs  setup_monitoring.rs
examples/stream-transactional-processing/: Cargo.toml  Dockerfile  Justfile  README.md  deployment.yaml  sqlx-data.json  stream.yaml
examples/stream-transactional-processing/migrations/: 20210924185613_base.sql  base.sql
examples/stream-transactional-processing/src/: main.rs
hadron/: Cargo.toml  README.md  build.rs
hadron-cli/: Cargo.toml  Dockerfile  README.md
hadron-cli/src/: client.rs  lib.rs
hadron-cli/src/cmd/pipeline/: mod.rs  sub.rs
hadron-cli/src/cmd/stream/: pub.rs  sub.rs
hadron-client/: CHANGELOG.md  Cargo.toml  README.md  build.rs
hadron-client/examples/: genproto.rs
hadron-client/src/: common.rs  handler.rs  lib.rs
hadron-client/src/client/: mod.rs  pipeline.rs  publisher.rs  subscriber.rs
hadron-client/src/grpc/: mod.rs  operator.rs  stream.rs  stream_ext.rs
hadron-core/: CHANGELOG.md  Cargo.toml
hadron-core/examples/: crd.rs
hadron-core/src/: error.rs  lib.rs  procmetrics.rs  prom.rs
hadron-core/src/auth/: mod.rs  token.rs  user.rs
hadron-core/src/crd/: mod.rs  pipeline.rs  stream.rs  token.rs
hadron-operator/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs
hadron-operator/examples/: crd.rs
hadron-operator/src/: app.rs  config.rs  database.rs  futures.rs  main.rs  server.rs
hadron-operator/src/auth/: user.rs
hadron-operator/src/crd/: pipeline.rs
hadron-operator/src/grpc/: mod.rs  operator.rs  stream.rs
hadron-operator/src/k8s/: coordination.rs  data.rs  events.rs  metadata.rs  mod.rs  scheduler.rs
hadron-operator/src/models/: stream.rs
hadron-operator/src/models/proto/: pipeline.rs  stream.rs
hadron-operator/src/server/: cache.rs  http.rs  mod.rs  pipeline_replica.rs  webhook.rs
hadron-operator/src/server/stream/: publisher.rs  subscriber.rs
hadron-stream/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs
hadron-stream/proto/: pipeline.proto  stream.proto
hadron-stream/src/: app.rs  config.rs  config_test.rs  database.rs  error.rs  fixtures.rs  futures.rs  main.rs  server.rs  utils.rs  utils_test.rs
hadron-stream/src/grpc/: mod.rs  stream.rs  stream_ext.rs
hadron-stream/src/models/: mod.rs  pipeline.rs
hadron-stream/src/models/proto/: mod.rs  pipeline.rs  stream.rs
hadron-stream/src/pipeline/: mod.rs
hadron-stream/src/server/: mod.rs  prom.rs
hadron-stream/src/stream/: mod.rs  mod_test.rs  publisher.rs  publisher_test.rs  subscriber.rs  subscriber_test.rs
hadron-stream/src/watchers/: mod.rs  pipelines.rs  stream.rs  tokens.rs
hadron/examples/: basic.rs  schema.yaml
hadron/examples/hadron-schema/: 1611240177696-initial.yaml
hadron/hadron-schema/: .hadron-state.yaml  1611240177696-initial.yaml
hadron/src/: client.rs  common.rs  error.rs  lib.rs  parser.rs
hadron/src/client/: mod.rs
hadron/src/cmd/: mod.rs  pub.rs  publish.rs  sub.rs
hadron/src/cmd/auth/: mod.rs  token.rs
hadron/src/cmd/pipeline/: mod.rs  sub.rs
hadron/src/cmd/schema/: apply.rs  init.rs  mod.rs  new.rs
hadron/src/cmd/stream/: mod.rs  pub.rs  sub.rs
hadron/src/proto/: client.rs
hadrond/: .env  Cargo.toml  build.rs
hadrond/_src/: controller.tmpl.rs
hadrond/_src/ctl_placement/: events.rs  mod.rs
hadrond/_src/ctl_raft/: macros.rs  mod.rs  models.rs
hadrond/_src/ctl_raft/storage/: index.rs  mod.rs
hadrond/_src/ctl_stream/: mod.rs
hadrond/_src/discovery/: README.md  mod.rs
hadrond/_src/network/: client.rs  mod.rs
hadrond/_src/proto/: client.rs  mod.rs  peer.rs  storage.rs
hadrond/_src/raft/: storage.rs
hadrond/examples/: crd.rs  demo.yaml
hadrond/proto/: auth.proto  client.capnp  pipeline.proto  schema.proto  storage.proto
hadrond/src/: app.rs  auth.rs  config.rs  database.rs  error.rs  futures.rs  lib.rs  main.rs  models.rs  server.rs  utils.rs
hadrond/src/_db/: mod.rs  stream.rs
hadrond/src/_db/db_sled/: mod.rs  raft.rs
hadrond/src/app/: events.rs  mod.rs  network.rs  tasks.rs
hadrond/src/auth/: token.rs  user.rs
hadrond/src/core/: mod.rs  network.rs  storage.rs
hadrond/src/core/storage/: mod.rs  (+1 more)
hadrond/src/crc/: command.rs  mod.rs  network.rs
hadrond/src/crd/: mod.rs  pipeline.rs  stream.rs  token.rs
hadrond/src/ctl_placement/: commands.rs  events.rs  mod.rs  models.rs  tasks.rs
hadrond/src/ctl_raft/: events.rs  mod.rs  network.rs
hadrond/src/ctl_stream/: mod.rs  repl.rs  storage.rs
hadrond/src/database/: mod.rs
hadrond/src/discovery/: dns.rs  mod.rs
hadrond/src/grpc/: stream.rs
hadrond/src/k8s/: data.rs  mod.rs  scheduler.rs
hadrond/src/models/: auth.rs  events.rs  impls.rs  mod.rs  pipeline.rs  placement.rs  schema.rs  schema_impls.rs  traits.rs  validation.rs
hadrond/src/network/: client.rs  mod.rs  peer.rs
hadrond/src/pipeline/: mod.rs
hadrond/src/proto/: README.md  client.rs  mod.rs  peer.rs  storage.rs
hadrond/src/raft/: mod.rs  network.rs
hadrond/src/server/: events.rs  mod.rs  pipeline.rs  stream_replica.rs
hadrond/src/spc/: mod.rs
hadrond/src/storage/: mod.rs
hadrond/src/stream/: mod.rs  publisher.rs  subscriber.rs
lib/rust/: Cargo.toml  README.md  _Cargo.toml
lib/rust/examples/: genproto.rs
lib/rust/src/: common.rs  error.rs  futures.rs  handler.rs  lib.rs
proto/: Cargo.toml  README.md  _client.proto  build.rs  client.proto  operator.proto  stream.proto
proto/src/: client.rs  lib.rs  v1.rs
(+295 files in other folders)
