[package]
authors = ["Anthony Dodd <dodd.anthonyjosiah@gmail.com>"]
edition = "2018"
name = "railgun"
version = "0.1.0"

[dependencies]
actix = "0.8"
actix-codec = "0.1"
actix-web = "1.0.0-rc"
actix-web-actors = "1.0.0-rc"
awc = "0.2"
backoff = "0.1"
bytes = "0.4"
chrono = "0.4"
env_logger = "0.6"
envy = "0.4"
futures = "0.1"
log = "0.4"
prost = "0.5"
raft = "0.5"
serde = { version="1", features=["derive"] }
sled = "0.23"
tokio-timer = "0.2"
trust-dns-resolver = "0.11"
uuid = { version="0.7", default-features=false, features=["v4"] }

[build-dependencies]
prost-build = "0.5"
