[package]
authors = ["Anthony Dodd <dodd.anthonyjosiah@gmail.com>"]
edition = "2018"
name = "hadron"
version = "0.1.0"

[dependencies]
anyhow = "1"
async-raft = { git = "https://github.com/async-raft/async-raft.git", branch = "12-cache-replicated-entries-and-dont-block" }
async-std = { version = "1.7.0", features = ["tokio02"] }
backoff = "0.1"
bytes = "0.6"
chrono = "0.4"
envy = "0.4"
futures = "0.3"
lazy_static = "1"
prost = "0.6"
regex = "1"
serde = { version="1", features=["derive"] }
sled = "0.34"
tokio = { version = "0.2", default-features = false, features = ["rt-threaded", "io-driver", "io-util", "time", "macros", "stream", "signal", "dns"] }
tonic = { version = "0.3", default-features = false, features = ["transport", "codegen", "tls", "prost"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.15"
trust-dns-resolver = "0.19"
uuid = { version="0.8", default-features=false, features=["v4"] }

[build-dependencies]
anyhow = "1"
tonic-build = "0.3"

# [dev-dependencies]
# proptest = "0.9"
# tempfile = "3"
