[package]
authors = ["Anthony Dodd <dodd.anthonyjosiah@gmail.com>"]
edition = "2021"
name = "hadron-cli"
version = "0.1.0-beta.0"
description = "The Hadron CLI."

[dependencies]
anyhow = "1"
base64 = "0.13"
futures = "0.3"
hadron = { package = "hadron-client", version = "0.1.0-beta.0" }
lazy_static = "1"
regex = "1"
structopt = "0.3"
structopt-derive = "0.4"
tokio = { version = "1", default-features = false, features = [
    # See https://docs.rs/tokio/latest/tokio/#feature-flags
    "rt", "io-util", "net", "time", "macros", "sync", "signal", "fs",
]}
tokio-stream = { version = "0.1", default-features = false, features = ["time", "net", "signal", "sync"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
uuid = { version = "0.8", default-features = false, features = ["v4"] }
