[package]
name = "hadron-client"
version = "0.1.0-beta.0"
description = "The Hadron Rust client library."
authors = ["Anthony Dodd <dodd.anthonyjosiah@gmail.com>"]
categories = ["api-bindings", "concurrency", "database"]
edition = "2018"
keywords = ["hadron", "events", "CloudEvents", "stream-processing", "workflows"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/hadron-project/hadron"

[dependencies]
anyhow = "1"
arc-swap = "1.3.1"
async-trait = "0.1"
base64 = "0.13"
futures = "0.3"
http = "0.2"
prost = "0.8"
rand = "0.8"
seahash = "4.1.0"
tokio = { version = "1", default-features = false, features = [
    # See https://docs.rs/tokio/latest/tokio/#feature-flags
    "rt", "io-util", "net", "time", "macros", "sync", "signal",
]}
tokio-stream = { version = "0.1", default-features = false, features = ["time", "net", "signal", "sync"] }
tonic = { version = "0.5", default-features = false, features = ["transport", "codegen", "prost", "tls"] }
tower = { version = "0.4", default-features = false, features = ["discover"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = "0.2"

[dev-dependencies]
anyhow = "1"
tonic-build = "0.5"
