[package]
name = "hadron-core"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1"
base64 = "0.13"
jsonwebtoken = "7"
k8s-openapi = { version = "0.13", default-features = false, features = ["api", "v1_18"] }
kube = { version = "0.59", default-features = false, features = ["derive", "jsonpatch"] }
schemars = "0.8"
serde = { version="1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
thiserror = "1"
tonic = "0.5"
uuid = { version="0.8", default-features=false, features=["serde", "v4"] }
