[package]
authors = ["Anthony Dodd <dodd.anthonyjosiah@gmail.com>"]
edition = "2018"
name = "hadron-operator"
version = "0.1.0-beta.0"
description = "The Hadron Kubernetes operator."

[profile.release]
lto = true
codegen-units = 1

[dependencies]
anyhow = "1"
axum = "0.2"
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
envy = "0.4"
futures = "0.3"
hadron-core = { path = "../hadron-core" }
http = "0.2"
hyper = { version = "0.14", default-features = false, features = ["http1", "http2", "server", "runtime"] }
jsonwebtoken = "7.2"
k8s-openapi = { version = "0.13", default-features = false, features = ["api", "v1_18"] }
kube = { version = "0.59", default-features = false, features = ["admission", "derive", "gzip", "jsonpatch", "rustls-tls", "ws"] }
kube-runtime = { version = "0.59", default-features = false }
maplit = "1"
prost = "0.8"
ring = "0.16"
serde = { version="1", features = ["derive"] }
tokio = { version = "1", default-features = false, features = [
    # See https://docs.rs/tokio/latest/tokio/#feature-flags
    "rt-multi-thread", "io-util", "net", "time", "macros", "sync", "signal", "fs",
]}
tokio-rustls = "0.22.0"
tokio-stream = { version = "0.1", default-features = false, features = ["time", "net", "signal", "sync"] }
tonic = "0.5"
tower-http = "0.1.1"
tracing = { version = "0.1", features = ["attributes", "release_max_level_trace"] }
tracing-subscriber = "0.2"

[build-dependencies]
anyhow = "1"
tonic-build = "0.5"
