[package]
authors = ["Anthony Dodd <dodd.anthonyjosiah@gmail.com>"]
edition = "2018"
name = "hadron-stream"
version = "0.1.0"
description = "The Hadron stream controller."

[profile.release]
lto = true
codegen-units = 1

# TODO: prune unused deps.

[dependencies]
anyhow = "1"
arc-swap = "1"
base64 = "0.13"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "4"
envy = "0.4"
futures = "0.3"
hadron-core = { path = "../hadron-core" }
h2 = { version = "0.3", default-features = false, features = ["stream"] }
http = "0.2"
jsonwebtoken = "7.2"
k8s-openapi = { version = "0.13", default-features = false, features = ["api", "v1_18"] }
kube = { version = "0.59", default-features = false, features = ["admission", "derive", "gzip", "jsonpatch", "rustls-tls", "ws"] }
kube-runtime = { version = "0.59", default-features = false }
lazy_static = "1"
prost = "0.8"
rand = "0.8"
regex = "1"
serde = { version="1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
sled = "0.34"
thiserror = "1"
tokio = { version = "1", default-features = false, features = [
    # See https://docs.rs/tokio/latest/tokio/#feature-flags
    "rt-multi-thread", "io-util", "net", "time", "macros", "sync", "signal", "fs",
]}
tokio-stream = { version = "0.1", default-features = false, features = ["time", "net", "signal", "sync"] }
tonic = "0.5"
tracing = { version = "0.1", features = ["attributes", "release_max_level_trace"] }
tracing-subscriber = "0.2"
uuid = { version="0.8", default-features=false, features=["serde", "v4"] }

[build-dependencies]
anyhow = "1"
tonic-build = "0.5"
