[package]
authors = ["Anthony Dodd <dodd.anthonyjosiah@gmail.com>"]
edition = "2021"
name = "hadron-stream"
version = "0.1.0-beta.1"
description = "The Hadron stream controller."

[profile.release]
lto = true
codegen-units = 1

[dependencies]
anyhow = "1"
arc-swap = "1"
base64 = "0.13"
envy = "0.4"
futures = "0.3"
hadron-core = { path = "../hadron-core" }
http = "0.2"
jsonwebtoken = "7.2"
k8s-openapi = { version = "0.13", default-features = false, features = ["api", "v1_22"] }
kube = { version = "0.63", default-features = false, features = ["admission", "client", "derive", "gzip", "jsonpatch", "runtime", "rustls-tls", "ws"] }
prost = "0.9"
rand = "0.8"
serde = { version="1", features = ["derive"] }
sled = "0.34"
thiserror = "1"
time = "0.3.4"
tokio = { version = "1", default-features = false, features = [
    # See https://docs.rs/tokio/latest/tokio/#feature-flags
    "rt-multi-thread", "io-util", "net", "time", "macros", "sync", "signal", "fs",
]}
tokio-stream = { version = "0.1", default-features = false, features = ["time", "net", "signal", "sync"] }
tonic = "0.6"
tracing = { version = "0.1", features = ["attributes", "release_max_level_trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
uuid = { version="0.8", default-features=false, features=["serde", "v4"] }

[build-dependencies]
anyhow = "1"
tonic-build = "0.6"

[dev-dependencies]
tempfile = "3"
