[package]
authors = ["Anthony Dodd <dodd.anthonyjosiah@gmail.com>"]
edition = "2018"
name = "hadron"
version = "0.1.0"
description = "The Hadron client."

[dependencies]
anyhow = "1"
futures = "0.3"
prost = "0.6"
tonic = { version = "0.3", default-features = false, features = ["transport", "codegen", "tls", "prost"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.15"

[dev-dependencies]
tokio = { version = "0.2", default-features = false, features = ["rt-threaded", "io-driver", "io-util", "time", "macros", "fs"] }

[build-dependencies]
anyhow = "1"
tonic-build = "0.3"
