[package]
authors = ["Anthony Dodd <dodd.anthonyjosiah@gmail.com>"]
edition = "2018"
name = "hadrond"
version = "0.1.0"
description = "The Hadron server."

[dependencies]
anyhow = "1"
async-compression = { version = "0.3.6", features = ["zstd"] }
async-raft = "=0.6.0-alpha.2"
bincode = "1.3.1"
bytes = "0.6"
chrono = { version = "0.4.19", features = ["serde"] }
envy = "0.4"
flexbuffers = "0.2.2"
futures = "0.3"
jsonwebtoken = "7.2.0"
lazy_static = "1"
num_cpus = "1.13.0"
prost = "0.6"
regex = "1"
serde = { version="1", features = ["derive"] }
serde-aux = "2.1.0"
serde_yaml = { git = "https://github.com/thedodd/serde-yaml.git", branch = "multidoc" }
sled = "0.34.6"
thiserror = "1.0.22"
tokio = { version = "0.2", default-features = false, features = ["rt-threaded", "io-driver", "io-util", "time", "macros", "stream", "signal", "dns", "blocking"] }
tokio-tar = "0.2.0"
tonic = { version = "0.3", default-features = false, features = ["transport", "codegen", "tls", "prost"] }
tracing = { version = "0.1", features = ["attributes", "release_max_level_trace"] }
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.15"
trust-dns-resolver = "0.19"
uuid = { version="0.8", default-features=false, features=["v4"] }

[build-dependencies]
anyhow = "1"
tonic-build = "0.3"
