[package]
authors = ["Anthony Dodd <dodd.anthonyjosiah@gmail.com>"]
edition = "2018"
name = "hadrond"
version = "0.1.0"
description = "The Hadron server."

[profile.release]
lto = true
codegen-units = 1

[dependencies]
anyhow = "1"
base64 = "0.13.0"
bcrypt = "0.9.0"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "4.0.2"
envy = "0.4"
futures = "0.3"
h2 = { version = "0.3.2", default-features = false, features = ["stream"] }
http = "0.2.4"
jsonwebtoken = "7.2.0"
k8s-openapi = { version = "0.11", default-features = false, features = ["api", "v1_18"] }
kube = { version = "0.55.0", default-features = false, features = ["admission", "derive", "gzip", "jsonpatch", "rustls-tls", "ws"] }
kube-runtime = { version = "0.55.0", default-features = false, features = ["rustls-tls"] }
lazy_static = "1"
prost = "0.7"
proto = { version = "0.1", path = "../proto" }
rand = "0.8.3"
regex = "1"
schemars = "0.8.3"
seahash = "4.1.0"
serde = { version="1", features = ["derive"] }
serde-aux = "2"
serde_json = "1"
serde_yaml = { git = "https://github.com/thedodd/serde-yaml.git", branch = "multidoc" }
sled = "0.34.6"
thiserror = "1"
tokio = { version = "1", default-features = false, features = [
    # See https://docs.rs/tokio/1.4.0/tokio/#feature-flags
    "rt-multi-thread", "io-util", "net", "time", "macros", "sync", "signal", "fs",
]}
tokio-stream = { version = "0.1.5", default-features = false, features = ["time", "net", "signal", "sync"] }
tracing = { version = "0.1", features = ["attributes", "release_max_level_trace"] }
tracing-subscriber = "0.2.15"
trust-dns-resolver = "0.20"
uuid = { version="0.8", default-features=false, features=["serde", "v4"] }

[build-dependencies]
anyhow = "1"
prost-build = "0.7"
