[package]
authors = ["Anthony Dodd <dodd.anthonyjosiah@gmail.com>"]
edition = "2018"
name = "hadron"
version = "0.1.0"
description = "The Hadron Rust client library."

[dependencies]
anyhow = "1"
backoff = { version = "0.3", default-features = false, features = ["tokio"] }
base64 = "0.12"
bytes = "1"
futures = "0.3"
h2 = "0.3"
http = "0.2"
prost = "0.7"
proto = { version = "0.1", path = "../../proto" }
seahash = "4.1.0"
tokio = { version = "1", default-features = false, features = [
    # See https://docs.rs/tokio/1.4.0/tokio/#feature-flags
    "rt", "io-util", "net", "time", "macros", "sync", "signal", "fs",
]}
tokio-stream = { version = "0.1", default-features = false, features = ["time", "net", "signal", "sync"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = "0.2"
